tests/ui/cast/ptr-to-trait-obj-wrap-upcast.stderr
error[E0606]: casting `*const (dyn Sub + 'static)` as `*const Wrapper<dyn Super>` is invalid
  --> $DIR/ptr-to-trait-obj-wrap-upcast.rs:11:5
   |
LL |     ptr as _
   |     ^^^^^^^^
   |
   = note: vtable kinds may not match

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0606`.
